src/sass/style.scss
@font-face {
	font-family: 'Kenney Pixel Square';
	font-style: normal;
	font-weight: 400;
	src:
		/* local('Yanone Kaffeesatz Regular'), */
		/* local('YanoneKaffeesatz-Regular'), */
		/* from https://fonts.gstatic.com/s/yanonekaffeesatz/v8/YDAoLskQQ5MOAgvHUQCcLRTHiN2BPBirwIkMLKUspj4.woff */
		url('/assets/fonts/kenney_pixel_square-webfont.woff') format('woff'),
		/* from https://fonts.gstatic.com/s/yanonekaffeesatz/v8/YDAoLskQQ5MOAgvHUQCcLfGwxTS8d1Q9KiDNCMKLFUM.woff2 */
		url('/assets/fonts/kenney_pixel_square-webfont.woff2') format('woff2');
}

@font-face {
	font-family: 'Kenney Pixel';
	font-style: normal;
	font-weight: 400;
	src:
		url('/assets/fonts/kenney_pixel-webfont.woff') format('woff'),
		url('/assets/fonts/kenney_pixel-webfont.woff2') format('woff2');
	/* font-display: swap; */
}

@font-face {
  font-family: 'fixedsys';
  src: url('/assets/fonts/fsex300-webfont.eot');
  src: url('/assets/fonts/fsex300-webfont.eot?#iefix') format('embedded-opentype'),
  url('/assets/fonts/fsex300-webfont.woff') format('woff'),
  url('/assets/fonts/fsex300-webfont.ttf') format('truetype'),
  url('/assets/fonts/fsex300-webfont.svg#fixedsys') format('svg');
  font-weight: normal;
  font-style: normal;
  -webkit-font-smoothing: none;
  -moz-osx-font-smoothing: none;
  font-smooth: never;
}

@mixin kenney-pixel {
  font-family: "Kenney Pixel", 'Share Tech Mono', 'Courier Prime', 'Courier New', sans-serif;
}

@mixin fixedsys-stack {
  font-family: 'fixedsys', 'Courier Prime', 'Courier New', sans-serif;
}

@mixin kenney-pixel-1p5x {
  @include kenney-pixel;

  font-size: 1.5rem;
}


@mixin kenney-pixel-2x {
  @include kenney-pixel;

  font-size: 2rem;
}

:root {
  --site-width: 45rem;
  --color-one: #A6033F;
  --color-background: #F2D8DA; // edb525
  --color-three: #F266C1;
  --color-four: #D99C9C;
  --color-five: #51608C;
  --color-six: #00CBC9;
}

// @media (prefers-color-scheme: dark) {
//   :root {
//     --color-background: #222831;
//     --color-five: #EEEEEE;
//   }
// }

// #color-mode:checked ~ .color-scheme-wrapper {
//   --color-background: #222831;
//   --color-five: #EEEEEE;
// }

// #color-mode ~ label::after {
//   content: '🌞';
// }

// #color-mode:checked ~ label::after {
//   content: '🌙';
// }

// @media (prefers-color-scheme: dark) {
//   #color-mode:checked ~ .color-scheme-wrapper {
//     --color-background: #FFF;
//     --color-five: #000;
//   }
// }
  

body {
    @include fixedsys-stack();
    font-display: swap;
    font-size: 24px;
    height: 100vh;
    // line-height: 4rem;

    overflow-x: auto;
    overflow-y: scroll;
    margin: 0 auto;

    color: var(--color-five);

    cursor: url("/assets/images/cursor-pointer.png") 12 0,auto;

    .color-scheme-wrapper {
      display: grid;
      grid-template-rows: auto 1fr auto;
      grid-template-columns: 1fr;
      min-height:100vh;

      background-color: var(--color-five);
      color: var(--color-background);
    }
}


// .light-mode-hide {
//   display:none;
//   }
  
//   @media (prefers-color-scheme: dark) {
//   .dark-mode-hide {
//   display:none;
//   }
//   }
  
//   @media (prefers-color-scheme: dark) {
//   .light-mode-hide {
//   display:initial;
//   }
// }

// input[type="checkbox"] {
//   opacity: 0.00001;
//   position: absolute;
// }

// label {
//   cursor: pointer;
//   position: absolute;
//   background: var(--color-background);
//   color: var(--color-five);
//   padding: 1rem;
//   top: 1rem;
//   left: 1rem;
//   display: flex;
//   align-items: center;
// }

#nav-wrapper {

  #site-logo-text {
    // text-align: center;
    @include fixedsys-stack();
    text-transform: uppercase;
    font-size: 2rem;
    margin: 0 auto;
    padding: 0 1rem;
    max-width: var(--site-width);

    a {
      text-decoration: none;
    }
  }

  nav {
    @include fixedsys-stack();

    display: flex;
    justify-content: center;
    align-items: center;
  
    margin: 0 auto;
    max-width: var(--site-width);
  
    a {
      display: block;
      padding: 1rem 2rem;
    }
  }
}



#main-wrapper {

  main {
    margin: 0 auto;
    padding: 0 1rem;
    max-width: var(--site-width);
  }
}

#footer-wrapper {
  @include fixedsys-stack();
  background: var(--color-five);
  // border-top: 6px solid var(--color-three);

  footer {
    margin: 0 auto;
    max-width: var(--site-width);
    color: var(--color-background);
    padding: 1rem 1rem;
    // text-align: center;

    a {
      text-decoration: none;
    }
  }
}



p {
  line-height: 1.3rem;
}

a {
  outline: 0;
  cursor: url("/assets/images/cursor-hand.png") 12 0, auto;
  color: var(--color-six);
}

a:hover {
  color: var(--color-three);
}

/* Headings */
h1 {font-size: 2em }
h2 {font-size: 1.571em}	/* 22px */
h3 {font-size: 1.429em}	/* 20px */
h4 {font-size: 1.286em}	/* 18px */
h5 {font-size: 1.143em}	/* 16px */
h6 {font-size: 1em}		/* 14px */

h1, h2, h3, h4, h5, h6 {
	font-weight: 400;
	line-height: 1.1;
	// margin-bottom: .8em;
    @include fixedsys-stack();
}



#index-nav nav {
  @include fixedsys-stack();

  display: grid;
  grid-template-columns: repeat(6,1fr);
  
  grid-column-gap: .75rem;
  grid-row-gap: .75rem;

  text-align: center;
  font-size: 2rem;
  a {
    display: block;
    padding: 1rem 2rem;
    border: 3px dashed #000;
    text-decoration: none;

    grid-column: span 3;

    &:hover {
      background-color: var(--color-three);
      color: var(--color-background);
      border: 3px dashed #CB9D06;
    }
  }
}

img#article-hero {
  max-width:100%;
  width: 100%;
  height: auto;
  image-rendering: pixelated;
}

img.recipeimage {
  max-width:100%;
  width: 100%;
  height: auto;
  image-rendering: pixelated;
}

article img {
  max-width:100%;
  width: 100%;
  height: auto;
}

code {
  // @include fixedsys-stack();
}

#date_created, #date_modified {
  @include fixedsys-stack();
}

ol, ul {
  line-height: 2rem;
}

// #header-nav-bar {
//   border-bottom: 6px solid var(--color-three);
// }

.bottom-line {
  border-top: 4px solid var(--color-three);
  height: 4px;
}

